--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./.cache:/root
-      - ./:/workdir
+      - ./src:/workdir
     command:
       - demo.kts
     depends_on:
