--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       dockerfile: Dockerfile
     container_name: index-demo
     volumes:
-      - ./.cache:/root
       - ./src:/workdir
+      - ./.cache:/root
     command:
       - index-demo.kts
     depends_on:
@@ -21,9 +21,11 @@ services:
       dockerfile: Dockerfile
     container_name: flush-demo
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./.cache:/root
       - ./src:/workdir
+      - ./.cache:/root
+#      Will this work?
+      - ./config:/workdir/config
+      - /var/run/docker.sock:/var/run/docker.sock
     command:
       - demo.kts
     depends_on:
@@ -38,7 +40,7 @@ services:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=test
     volumes:
-      - ./mysql.cnf:/etc/mysql/conf.d/mysql.cnf
+      - ./config/mysql.cnf:/etc/mysql/conf.d/mysql.cnf
     ports:
       - '3306:3306'
     healthcheck:
