--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,11 +23,9 @@ services:
     volumes:
       - ./src:/workdir
       - ./.cache:/root
-#      Will this work?
-      - ./config:/workdir/config
       - /var/run/docker.sock:/var/run/docker.sock
     command:
-      - demo.kts
+      - flush-demo.kts
     depends_on:
       mysql:
         condition: service_healthy
@@ -39,8 +37,6 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=test
-    volumes:
-      - ./config/mysql.cnf:/etc/mysql/conf.d/mysql.cnf
     ports:
       - '3306:3306'
     healthcheck:
